sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: illegal start of simple pattern
	for (int i = 1 to i < getNombreValeurs() by 1) {
                   ^AlgInsertionSort:15: error: '<-' expected but '}' found.
}
^